@startuml

!theme crt-amber

<style>
header {
  HorizontalAlignment left
}
</style>

class Clerk {}

class Inventory {
  List<Item>
  double getTotalPurchaseValue()
}

package "events" {
  class TheEventBus <<singleton>> {
    EventBus getBus(String channel) // Guava::EventBus
  }

  abstract class StoreEvent {
    Clerk // stores caller
    // indirectly: this.clerk.store.inventory
  }

  'Publish which clerk has arrived at the store.
  'Publish number of items added to inventory (if any).
  class ArriveAtStoreEvent extends StoreEvent {
    List<Order> recentlyDelivered;
  }

  'Publish the amount of money in the register.
  class CheckRegisterEvent extends StoreEvent {
  }

  'Publish the amount of money in the register.
  class GoToBankEvent extends StoreEvent {
    int oldAmntInRegister
    int newAmntInRegister
  }

  'Publish the total number of items.
  'DoInventory: Publish the total purchase price value of inventory items.
  class DoInventoryEvent extends StoreEvent {
    Inventory recentlyDamaged
  }

  'Publish the total number of items ordered.
  class PlaceAnOrderEvent extends StoreEvent {
    Order recentlyOrdered
  }

  'Orders can fail if the register is out of cash.
  class OrderFailureEvent extends StoreEvent {
    itemType
    int failQuantity
  }

  'Publish the total number of items sold.
  class OpenTheStoreEvent extends StoreEvent {
    int buyingCustomers
    int sellingCustomers
    int totalSold
    int totalBought
  }

  'Publish the total number of items damaged in cleaning.
  class CleanTheStoreEvent extends StoreEvent {
    Inventory recentlyDamaged
  }

  'Publish which clerk has left the store
  class LeaveTheStoreEvent extends StoreEvent {
  }

  ' --- Relationships within Package ---
  Clerk ..> TheEventBus : publishes
  DoInventoryEvent *-- Inventory
  PlaceAnOrderEvent *-- Inventory
  CleanTheStoreEvent *-- Inventory

}

'================================================================
' Top-Level Simulation Components
'================================================================
class Logger {
}

' --- Top-Level Relationships ---
Logger <.. TheEventBus : notifies
Clerk ..> StoreEvent : creates

@enduml
